[package]
name = "sorting_algo_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml.git"
default-features = false
features = ["graphics"]

[dependencies.egui-sfml]
git = "https://github.com/Pranjal-Patel/egui-sfml"
